Fix: small html tweaks for a better readability

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,6 @@
 @use "variables" as *;
 @use "reset" as *;
 
-@font-face {
-  font-family: "Figtree";
-  src: url("../assets/fonts/Figtree-VariableFont_wght.ttf");
-  font-weight: 125 950;
-  font-stretch: 75% 125%;
-  font-style: normal;
-}
-
 body {
   min-height: 100svh;
   padding: 10px;
